Added some changes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./src/style.css">
     <title>Create post | DOM</title>
 </head>
@@ -13,15 +14,16 @@
             <div class="flex">
                 <div class="header-logo">
                     <!-- <img src="" alt=""> -->
-                    <h1>LOGO</h1>
+                    <a href="./index.html"><h1>LOGO</h1></a>
                 </div>
                 <div class="header-menu">
                     <ul class="flex">
-                        <li><a href="#">Meu item 1</a></li>
-                        <li><a href="#">Meu item 2</a></li>
-                        <li><a href="#">Meu item 3</a></li>
-                        <li><a href="#">Meu item 4</a></li>
-                        <li><button id="createPost">Create new Post</button></li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Posts</a></li>
+                        <li><a href="#">Profile</a></li>
+                        <li><a href="#">Message</a></li>
+                        <li><button id="createPost"><span><i class="fa-solid fa-pen-to-square"></i></span> Create new Post</button></li>
                     </ul>
                 </div>
             </div>
@@ -31,20 +33,34 @@
         <div class="container">
             <div class="flex">
                 <div class="profile">
-                    <img src="./src/imgs/profile.png" alt="">
-                    <h3>Jhon Doe</h3>
-                    <h5>Senior Frontend Developer | Mern Stack</h5>
-                    <ul>
-                        <li>My information</li>
-                        <li>My information</li>
-                        <li>My information</li>
-                        <li>My information</li>
-                        <li>My information</li>
-                        <li>My information</li>
-                    </ul>
+                    <div class="profile-box">
+                        <img id="profile" src="./src/imgs/profile.png" alt="">
+                        <h3>Jhon Doe</h3>
+                        <h5>Junior Frontend Developer | Mern Stack</h5>
+                        <ul>
+                            <li>
+                                <span><i class="fa-solid fa-house-user"></i></span>
+                                Lives in
+                                <a href="#">Dhaka Bangladesh</a>
+                            </li>
+                            <li>
+                                <span>
+                                    <img src="./src/imgs/follow.png" alt="">
+                                </span>
+                                Followed by
+                                <a href="#">439 people</a>
+                            </li>
+                            <li>
+                                <span><i class="fa-brands fa-github"></i></span>
+                                Github
+                                <a href="#">nazim-uddin-limon</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="posts">
                     <div class="post-gird flex">
+                        <!-- Demo post -->
                         <!-- <div class="postBox">
                             <img src="./src/imgs/postImage.jpg" alt="">
                             <div class="postContent">
